--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,15 +42,15 @@
     --orange-800: #996207;
     --orange-900: #7F5106;
 
-    --green-100: #E6F8D2;
-    --green-200: #C6EF98;
-    --green-300: #AAE867;
-    --green-400: #92E13D;
-    --green-500: #7ED321;
-    --green-600: #69AF1B;
-    --green-700: #579116;
-    --green-800: #487812;
-    --green-900: #3C640F;
+    --red-100: #FE8998;
+    --red-200: #FD5167;
+    --red-300: #FD213D;
+    --red-400: #F30220;
+    --red-500: #D0021B;
+    --red-600: #AD0216;
+    --red-700: #900212;
+    --red-800: #78020F;
+    --red-900: #64020C;
 
 }
 
@@ -65,12 +65,11 @@ html {
 }
 
 .app {
-    background-image: linear-gradient(135deg, var(--green-800), var(--green-900));
+    background-color: rgba(19, 67, 123, 0.1);
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-
 }
 
 button {
@@ -82,19 +81,24 @@ button {
 }
 
 .calculator {
-    background-color: var(--grey-700);
+    background-color: var(--grey-800);
     border-radius: 1rem;
     overflow: hidden;
     box-shadow: 2px 2px 2px 2px rgb(0, 0, 0, 0.5);
+    width: 375px;
+    min-width: 375px;
 }
 
 .calculator_display {
+    background-color: var(--grey-600);
     padding: 1rem 1rem;
     font-size: 1.5rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    min-width: 375px;
+    border-bottom-left-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+    box-shadow: 2px 2px 2px 2px rgb(0, 0, 0, 0.5);
 }
 
 .container {
@@ -106,11 +110,12 @@ button {
     justify-content: center;
     align-items: center;
     box-shadow: 2px 2px 2px 2px rgb(0, 0, 0, 0.5);
+    overflow: hidden;
 }
 
 .screen {
     flex: 1;
-    background-color: var(--green-500);
+    background-color: var(--blue-300);
     border: 1px solid rgb(0, 0, 0, 0.5);
     padding: 0.25rem 0.25rem;
     display: flex;
@@ -122,9 +127,8 @@ button {
 }
 
 .calculator_keys {
-    background-color: var(--grey-800);
-    border-top-right-radius: 0.75rem;
-    border-top-left-radius: 0.75rem;
+    
+  
     padding: 1rem 1rem 1rem 1rem;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -137,7 +141,6 @@ button {
 
     grid-column-gap: 1rem;
     grid-row-gap: 1.5rem;
-    box-shadow: 2px -2px 2px 2px rgb(0, 0, 0, 0.3);
 }
 
 .key {
@@ -239,9 +242,22 @@ button {
     background-color: var(--grey-300);
 }
 
-[data-type="operator_t1"] {
+.selected {
+    background-color: var(--grey-300);
+}
+
+[data-key="signs"],
+[data-key="percent"] {
     background-color: var(--orange-500);
 }
-[data-type="operator_t1"]:active {
+[data-key="signs"]:active,
+[data-key="percent"]:active {
     background-color: var(--orange-600);
+}
+
+[data-key="allClear"] {
+    background-color: var(--red-300);
+}
+[data-key="allClear"]:active {
+    background-color: var(--red-400);
 }
